tests/snapshots/compiler_error_fixtures/fbip_fail_nonfip_call.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/fbip_fail_nonfip_call.flx
== compile ==
failed (compile)
== diagnostics ==
error[E999]: FBIP Contract Failed

@fbip on `bounded` analysis result NotProvable:
- calls indirect or opaque callee `f` whose FBIP behavior is unknown

  examples/compiler_errors/fbip_fail_nonfip_call.flx:13:7
   |
13 | @fbip fn bounded(f, x) {
   |       ^^^^^^^^^^^^^^^^

Hint:
  Annotate only functions whose fresh allocations remain provably bounded.
== stdout ==
<not executed>
